<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="label">Container4Android</string>
    <string name="home">主页</string>
    <string name="unknown_container">未知容器</string>
    <string name="status">状态：</string>
    <string name="unknown">未知</string>
    <string name="running">运行中</string>
    <string name="stopping">停止中</string>
    <string name="starting">启动中</string>
    <string name="stop">停止</string>
    <string name="settings">设置</string>
    <string name="manager_modules">模块</string>
    <string name="no_container">没有容器\n快去添加你的第一个容器吧！</string>
    <string name="welcome">欢迎使用 Container4Android </string>
    <string name="welcome_desc">下一代 Android 上的 Linux 容器解决方案</string>
    <string name="welcome_module">模块化</string>
    <string name="welcome_deploy">部署</string>
    <string name="welcome_custom">自定义</string>
    <string name="app_ready">一切准备就绪</string>
    <string name="check_root">检查 ROOT 权限</string>
    <string name="request_permissions">检查权限</string>
    <string name="check_root_desc">为了让 Container4Android 正常使用，请给予 Container4Android ROOT 权限</string>
    <string name="welcome_deploy_desc">只需几个按钮，即可在 Android 上部署 Linux 环境</string>
    <string name="welcome_custom_desc">可以为容器设置 SSH、挂载、图形界面、音频输出等</string>
    <string name="welcome_module_desc">通过模块来为容器配置自定义功能，如自动安装 LAMP 环境等</string>
    <string name="app_ready_desc">开始使用 Container4Android 吧！</string>
    <string name="check_root_ok">ROOT 权限获取成功</string>
    <string name="check_root_fail">ROOT 检查失败</string>
    <string name="check_root_fail_desc">请确认你是否为 Container4Android 授权 ROOT 权限，或确认手机是否 ROOT</string>
    <string name="ok">确认</string>
    <string name="busybox_path_desc">设置 BusyBox 路径</string>
    <string name="busybox_path">BusyBox 路径</string>
    <string name="always_cpu_desc">在屏幕关闭时，保持 CPU 运行</string>
    <string name="always_cpu">CPU 唤醒</string>
    <string name="always_wifi_desc">运行时保持 WIFI 开启</string>
    <string name="always_wifi">保持 WIFI</string>
    <string name="always_display_desc">在运行时保持屏幕常亮</string>
    <string name="always_display">保持常亮</string>
    <string name="basic">基本设置</string>
    <string name="about">关于</string>
    <string name="app_version">v1.0</string>
    <string name="version">版本</string>
    <string name="send_feedback">发送反馈</string>
    <string name="send_feedback_desc">在 GitHub 上发送 Issue</string>
    <string name="secret_mode_desc">在桌面隐藏 Container4Android 图标</string>
    <string name="secret_mode">隐藏图标</string>
    <string name="no_network">网络未连接</string>
    <string name="no_network_desc">网络暂时不可用，请检查您的移动数据或无线网络</string>
    <string name="try_again">重试</string>
    <string name="hint">提示</string>
    <string name="secret_mode_hint">你可以在拨号键盘输入 *#*#266824637#*#* 来打开应用</string>
</resources>